--- a/docs/admin/assets/css/SP_RPanel.css
+++ b/docs/admin/assets/css/SP_RPanel.css
@@ -111,3 +111,12 @@ select {
     padding-top: 2rem;
     padding-left: 1.5rem;
 }
+
+/*back button */
+.back-btn {
+    margin: 1rem 0 0 1rem;
+}
+
+.back-btn button {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
