--- a/docs/admin/assets/css/register.css
+++ b/docs/admin/assets/css/register.css
@@ -14,19 +14,21 @@ html {
 
 main {
     flex-grow: 1;
-    margin-left: 240px;
+}
+.container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 40px 20px;
 }
 .margin-adding {
-    margin: 40px;
-}
-
-.container {
-    max-width: calc(100% - 220px);
-    margin: 0 auto;
     background: white;
     padding: 20px;
     border-radius: 16px;
     box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+    max-width: 900px;
+    width: 100%;
 }
 
 h1 {
