--- a/docs/assets/css/login.css
+++ b/docs/assets/css/login.css
@@ -52,7 +52,7 @@ button {
     border: none;
     color: white;
     cursor: pointer;
-    background-color: #4CAF50;
+    background-color: #4caf50;
     width: 50%;
     font-size: 16px;
 }
@@ -61,4 +61,15 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+form .icons {
+    position: absolute;
+}
+
+form .icons i {
+    position: relative;
+    left: 470px;
+    top: 35px;
+    cursor: pointer;
+    color: #4f4d4d;
 }
