--- a/docs/assets/css/form.css
+++ b/docs/assets/css/form.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-    color: darkcyan;
+    color: #1e7512;
 }
 
 label {
@@ -45,16 +45,42 @@ input {
 }
 
 button {
-    padding: 15px;
+    padding: 10px;
     border-radius: 10px;
     margin-top: 15px;
-    margin-bottom: 15px;
     border: none;
     color: white;
-    cursor: pointer;
-    background-color: #4caf50;
-    width: 50%;
+    background-color: #14540b;
+    width: 20%;
     font-size: 16px;
+}
+button:hover {
+    background-color: #1e7512;
+    box-shadow: 0px 3px 3px 0px #b5b7b4;
+    cursor: pointer;
+}
+
+button:active {
+    background-color: #14540b;
+    box-shadow: 0px 0px 0px #b5b7b4;
+    top: 2px; /* Simulate pressing down */
+}
+
+/*Back btn */
+.back-btn button {
+    margin-bottom: 15px;
+    background-color: #000000;
+}
+.back-btn button:hover {
+    background-color: #1f1818;
+    box-shadow: 0px 3px 3px 0px #cacaca;
+    cursor: pointer;
+}
+
+.back-btn button:active {
+    background-color: #000000;
+    box-shadow: 0px 3px 3px 0px #cacaca;
+    top: 2px; /* Simulate pressing down */
 }
 
 .wrap {
